修改图片存储方式为与文章关联

--- a/source/_posts/朴素贝叶斯（一）.md
+++ b/source/_posts/朴素贝叶斯（一）.md
@@ -23,14 +23,14 @@ copyright: true
 
 最初公式：
 
-![](/images/34.png)
+![](34.png)
 
 给定训练数据集(X, Y)，其中每个样本x都包括n维特征，即x=(x<sub>1</sub>, x<sub>2</sub>, x<sub>3</sub>,. . . ,  x<sub>n</sub>)，类标记集合含有k种类别，即y=(y<sub>1</sub>, y<sub>2</sub>,. . . , y<sub>k</sub>)。
 如果现在来了一个新样本x，求其类别。
 那么问题就转化为求解P(y<sub>1</sub>|x),P(y<sub>2</sub>|x ) , . . . , P(y<sub>k</sub>|x)中最大的那个，即求后验概率最大的输出：argmaxykP(y<sub>k</sub>|x)
 
 那P(y<sub>k</sub>|x)就通过贝叶斯定理求得：
-![](/images/35.png)
+![](35.png)
 
 分子中的P(y<sub>k</sub>) 是先验概率，根据训练集样本数就可以简单地计算出来。
 分母P(x)可以根据全概率公式算，但是对于任何输入的数据都是一个常数，所以可以忽略不计。
@@ -38,11 +38,11 @@ copyright: true
 k∏n<sub>i</sub>=1  S<sub>i</sub>
 这显然不可行。针对这个问题，  ** 朴素贝叶斯算法对条件概率分布作出了独立性的假设 ** ，通俗地讲就是说假设各个维度的特征x<sub>1</sub>, x<sub>2</sub>,  .  .  .  ,  x<sub>n</sub>互相独立  ，在这个假设的前提上，条件概率可以转化为：
 
-![](/images/36.png)
+![](36.png)
 
 公式最终转化成：
 
-![](/images/37.png)
+![](37.png)
 
   
 
@@ -50,16 +50,16 @@ k∏n<sub>i</sub>=1  S<sub>i</sub>
 
 _ ** 某些属性在某些类别上不存在 ** _ ，因此会导致p(x<sub>i</sub>|y<sub>k</sub>)为0，因此需要一下平滑处理（ _ **我一般不会对先验概率公式（下面第一个公式）做平滑，因为某个类别的样本数一般不会为0 ** _ ）：
 N是样本总数，k是类别总数，N<sub>y<sub>k</sub></sub>是类别为y<sub>k</sub>的样本个数，α是平滑值。
-![](/images/38.png)
+![](38.png)
 N<sub>y<sub>k</sub></sub>是类别为y<sub>k</sub>的样本个数，n是特征的维数，N<sub>y<sub>k</sub>,x<sub>i</sub></sub>是类别为y<sub>k</sub>的样本中，特征的值是x<sub>i</sub>的样本个数，α是平滑值。
-![](/images/39.png) 
+![](39.png) 
 当α=1时，称作Laplace平滑，当0<α < 1 时，称作Lidstone平滑， α=0时不做平滑。
 
 #####  例
 （来自下面的链接）：
-![](/images/40.png)
-![](/images/41.png)
-![](/images/42.png)
+![](40.png)
+![](41.png)
+![](42.png)
 由此可以判定y=-1。
 
 更详细可参考 ： [ 朴素贝叶斯（二）实现NBCorpus分类（附代码和数据） ](/2018/04/08/朴素贝叶斯（二）实现NBCorpus分类（附代码和数据）)
