--- a/source/_posts/(())、（）、[]区别.md
+++ b/source/_posts/(())、（）、[]区别.md
@@ -2,7 +2,7 @@
 title: '(())、（）、[]区别'
 date: "2018/04/20"
 tags: [ubuntu]
-categories: [ubuntu]
+categories: [linux]
 copyright: true
 ---
 ### （）
@@ -10,6 +10,8 @@ copyright: true
 ```
 array=(0 1 2 3)
 ```
+可以利用这个特性把一些函数的输出作为参数，转换成数组。
+
 #### 命令替换
 **_与\`\`一样，用以执行shell命令。需要搭配 $使用。_**
 并不是所有的shell解释器都可以使用。至少bash可以使用。用$() 代替\`\`在shell脚本里执行shell命令。
