--- a/source/_posts/(())、（）、[]区别.md
+++ b/source/_posts/(())、（）、[]区别.md
@@ -35,11 +35,13 @@ $()缺点： \`\`几乎所有版本的解释器都可以使用，但是$()较少
 括号中的命令将会新开一个子shell顺序执行，所以括号中的变量不能够被脚本余下的部分使用。括号中多个命令之间用分号隔开，最后一个命令可以没有分号，各命令和括号之间不必有空格。
 
 ### (())
+双括号中的变量可以不使用$符号前缀。
+
 #### 重定义变量值
-单纯用 (( )) 也可重定义变量值，比如 a=5; ((a++)) 可将 $a 重定义为6
+单纯用 (( )) 也可重定义变量值，比如 a=5; ((a++)) 可将 $a 重定义为6。
 
 #### 算术运算比较
-常用于算术运算比较，双括号中的变量可以不使用$符号前缀。
+常用于算术运算比较。
 比如可以直接使用for((i=0;i<5;i++))  不用(())时，可以使用 for i in \`seq 0 4\`或者for i in {0..4}。
 再比如可以直接使用if ((i<5)) （if和括号之间需要空格）, 如果不使用双括号, 则可用if test $a -gt 5或者if [ $i -lt 5 ]  （[]的前后都需要空格）。
 
@@ -50,7 +52,7 @@ $()缺点： \`\`几乎所有版本的解释器都可以使用，但是$()较少
 
 ### []
 （1）bash 的内部命令，[和test是等同的。if/test结构中的左中括号是调用test的命令标识，右中括号是关闭条件判断的。
-（2）Test和[]中可用的**_比较运算符只有==和!=，两者都是用于字符串比较的，不可用于整数比较，整数比较只能使用-eq，-gt这种形式。无论是字符串比较还是整数比较都不支持大于号小于号._**
+（2）Test和[]中可用的**_比较运算符只有=和!=，两者都是用于字符串比较的，不可用于整数比较，整数比较只能使用-eq，-gt这种形式。无论是字符串比较还是整数比较都不支持大于号小于号._**
 （3）在一个array 结构的上下文中，中括号用来引用数组中每个元素的编号。
 （4）字符范围。用作正则表达式的一部分，描述一个匹配的字符范围。
 
