--- a/source/_posts/(())、（）、[]区别.md
+++ b/source/_posts/(())、（）、[]区别.md
@@ -10,6 +10,12 @@ copyright: true
 ```
 array=(0 1 2 3)
 ```
+以空格为分隔符 分割 字符串为数组。
+```bash
+a="1 2 3 4"
+arr=(${a})
+echo ${arr[0]}
+```
 可以利用这个特性把一些函数的输出作为参数，转换成数组。
 
 #### 命令替换
