--- a/source/_drafts/草稿.md
+++ b/source/_drafts/草稿.md
@@ -5,3 +5,22 @@
    `mapreduce.output.fileoutputformat.compress.type`
    `mapreduce.output.fileoutputformat.compress.codec`  
 eg,`set mapreduce.output.fileoutputformat.compress.codec=org.apache.hadoop.io.compress.GzipCodec;`  设置job输出结果压缩成gz。
+
+`Couldn't connect to Docker daemon at http+unix://var/run/docker.sock - is it running?`
+出现这个问题是因为当前用户权限的问题，只要将当前用户加入docker组就可以啦~
+解决方案：
+
+1、如果还没有 docker group 就添加一个
+sudo groupadd docker
+2、将用户加入该 group 内。然后退出并重新登录就生效啦。
+sudo gpasswd -a ${USER} docker
+3、重启 docker 服务
+sudo service docker restart
+4、切换当前会话到新 group 或者重启 X 会话
+newgrp - docker
+注意:最后一步是必须的，否则因为 groups 命令获取到的是缓存的组信息，刚添加的组信息未能生效，所以 docker images 执行时同样有错。`
+--------------------- 
+作者：May.lv 
+来源：CSDN 
+原文：https://blog.csdn.net/qq_41527782/article/details/83411125 
+版权声明：本文为博主原创文章，转载请附上博文链接！
