--- a/source/_posts/最大似然.md
+++ b/source/_posts/最大似然.md
@@ -7,11 +7,7 @@ copyright: true
 ---
 作为逻辑回归的loss函数考虑。  最小二乘法是可以从最大似然估计推导出来的，所以它俩的本质应当是一样的。
 
-  
-
 最小二乘法 思想是 求欧式距离最小值。 即求出一条线，样本距离这条线的和最小。
-
-  
 
 最大似然符和高斯分布时，和最小二乘法的结果一样。
 
@@ -19,7 +15,6 @@ copyright: true
 
 最大似然中心思想，假设拿出来的样本数据有很大的参考性，用这个样本数据反推“导致”这个结果的参数。
 
-  
 
 举一下最常见的例子，一个麻袋里有白球与黑球，但是我不知道它们之间的比例，那我就有放回的抽取10次，结果我发现我抽到了8次黑球2次白球，至此我想知道有多少个黑
 球。
@@ -33,7 +28,6 @@ ln`（p^8 * (1-p)^2 ）= （8 * ln（p）+ 2 * ln (1-p)）` = 8 / p - 2 / ( 1 - 
 p=0.8
 
   
-
 用最大似然解题过程：
 
 （1）每个样本属于某个类别发生概率的乘积L（比如上面的例子，10个有8个黑球2个白球，因此是8个p 2个(1-p) 相乘）
@@ -41,18 +35,15 @@ p=0.8
 （2）ln( L )    加ln方法，乘法求导太复杂，不破坏单调性增加ln方法。式子最大值时p的值就是黑球的概率。
 
 （3）求导ln( L )    求导结果为0时 p的值就是黑球的概率。
-
   
 
 应用于逻辑回归ln(L)的推导：
 
-![](http://wiki.corp.qunar.com/confluence/download/attachments/187865559/image
-2018-1-9_18-3-17.png?version=1&modificationDate=1515492198000&api=v2)
+![](1.png)
 
 求导：
 
-![](http://wiki.corp.qunar.com/confluence/download/attachments/187865559/image
-2018-1-9_18-10-47.png?version=1&modificationDate=1515492647000&api=v2)
+![](2.png)
 
 可以对比和最小二乘法的结果一样。
 
