--- a/source/_posts/数据术语.md
+++ b/source/_posts/数据术语.md
@@ -20,3 +20,8 @@ UV(Unique Visitor)：是独立访客。通过用户IP排重统计数据；
 全量表：没有分区。表中数据是包含前一天到之前的所有数据。
 增量表：按天分区。对应分区存对应天的数据。
 快照表：按天分区。每个分区是包含前一天到之前的所有数据。
+
+### T+1
+`T+1` T日就是工作日（除了周六、日，或者是法定节假日）。 如果是周五、周六、周日，那么T+1日就是周一。 T+1就是次工作日了
+`D+1` 就是不分交易日还是节假日的第二天；
+`S+1` 就是第二秒。
